syntax = "proto3";

service LeaseUpdatesService {
	rpc LeaseUpdate(LeaseUpdateRequest) returns (LeaseUpdateResponse);
}

// Structures
message LeaseUpdate {
	string key = 1;
	repeated string targetTMIds = 2;
}
// ------------------------------

// Sending out updates
message LeaseUpdateRequest {
	int32 epoch = 1;
	repeated LeaseUpdate leases = 2;
}

message LeaseUpdateResponse {
	bool ok = 1;
}
// ------------------------------
